[package]
name = "supnum-fuzz"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
colored = "2.0"
mimalloc = "0.1"
indicatif = "0.17"
