[package]
name = "supnum-fuzz"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"
mimalloc = "0.1"
rand = "0.8"        
tokio-util = "0.7"  
